# rag-architecture-patterns

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-roadmapper.md  (+4 more)
.cursor/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
dataset/: README.md
evaluation/: README.md  golden_qa.json
scripts/: README.md  build_metadata.py  curate_corpus.py  cut_video_clips.py  extract_figures.py  probe_lightrag_token_tracker.py  seed_papers.json  video_sources.json
shared/: __init__.py  config.py  cost_tracker.py  display.py  embeddings.py  llm.py  loader.py  pricing.py
tests/: conftest.py  smoke_test.py  test_cost_tracker.py  test_dataset.py  test_display.py  test_env_example.py  test_golden_qa.py  test_loader.py  test_pricing.py  test_repo_metadata.py  test_tier_requirements.py
tier-1-naive/: README.md  __init__.py  chat.py  embed_openai.py  ingest.py  main.py  prompt.py  requirements.txt  retrieve.py  store.py
tier-2-managed/: README.md  __init__.py  main.py  query.py  requirements.txt  store.py
tier-3-graph/: README.md  __init__.py  cost_adapter.py  ingest.py  main.py  query.py  rag.py  requirements.txt
tier-4-multimodal/: .dockerignore  Dockerfile  README.md  cost_adapter.py  expected_output.md  ingest_images.py  ingest_pdfs.py  main.py  query.py  rag.py  requirements.txt
tier-5-agentic/: README.md  agent.py  expected_output.md  main.py  requirements.txt  tools.py
tier_1_naive/: __init__.py
tier_2_managed/: __init__.py
tier_3_graph/: __init__.py
tier_4_multimodal/: __init__.py
tier_5_agentic/: __init__.py
(+368 files in other folders)
